# jdb

./: CMakeLists.txt  README
include/jdb/database/: CompoundModel.hpp  DataClass.hpp  Database.hpp  ExtendedModel.hpp  Migration.hpp  Repository.hpp  SqliteDatabase.hpp
include/jdb/utils/: Format.hpp  Scope.hpp  State.hpp  StringLiteral.hpp
info/: CMakeLists.txt  config.h.in
src/: CMakeLists.txt
src/database/: CompoundModel.hpp  DataClass.hpp  Database.hpp  Repository.hpp  SqliteDatabase.hpp
src/utils/: Scope.hpp  State.hpp  StringLiteral.hpp
tests/: CMakeLists.txt  db_unit_test.cpp  utils_unit_test.cpp
